# arc-agi-quickstart

./: .gitignore  cerebras_few_shot.py  dsl_synthesis.py  groq_few_shot.py  groq_few_shot_lite.py  pyproject.toml  quickstart.py  submission.json
